# lam4doc/entrypoints/api/openapi/lam.yml
@@ -14,9 +14,9 @@ info:
     url: https://www.gnu.org/licenses/gpl-3.0.en.html
   version: 1.0.1
 
-servers:
-  - url: 'http://localhost:5000/'
-    description: Default server
+#servers:
+#  - url: 'http://localhost:5000/'
+#    description: Default server
 
 components:
   parameters:
@@ -27,15 +27,31 @@ components:
       schema:
         type: string
       description: Example parameter
-
   schemas:
-    ExampleSchema:
+    LAM_PROPERTIES:
       type: object
-      description: Example schema
+      description: The LAM properties document.
       properties:
-        example_value:
+        lam_properties_document:
           type: string
-          description: Example value
+          format: binary
+          description: The LAM properties document.
+    LAM_CLASSES:
+      type: object
+      description: The LAM classes document.
+      properties:
+        lam_classes_document:
+          type: string
+          format: binary
+          description: The LAM classes document.
+    CELEX_CLASSES:
+      type: object
+      description: The CELEX classes document.
+      properties:
+        celex_classes_document:
+          type: string
+          format: binary
+          description: The CELEX classes document.
 
 
 paths:
@@ -48,3 +64,23 @@ paths:
           description: OK.
         5XX:
           description: Unexpected Error.
+
+  /upload-rdf:
+    post:
+      operationId: lam4doc.entrypoints.api.handlers.upload_rdfs
+      description: Endpoint to upload RDF files.
+      requestBody:
+        required: false
+        content:
+          multipart/form-data:
+            schema:
+              anyOf:
+                - $ref: '#/components/schemas/LAM_PROPERTIES'
+                - $ref: '#/components/schemas/LAM_CLASSES'
+                - $ref: '#/components/schemas/CELEX_CLASSES'
+      responses:
+        200:
+          description: OK.
+        5XX:
+          description: Unexpected Error.
+
